Feat: Add a search for the database

--- a/views/messages.ejs
+++ b/views/messages.ejs
@@ -8,7 +8,7 @@
         <h2>Messages</h2>
         <ul>
             <% items.forEach(function(item) { %>
-                <li><%= item.name %> - <%= item.message %> </li>
+                <li class="box-message"><div class="name"><%= item.name %></div > <%= item.message %> </li>
             <% }); %>
         </ul>
     </body>
