--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -1,6 +1,7 @@
 body {
   padding: 50px;
   font: 14px "Lucida Grande", Helvetica, Arial, sans-serif;
+  margin: 10px;
 }
 
 a {
@@ -52,7 +53,34 @@ a {
   color: white;
 }
 
+#go-btn {
+  background-color: #1abc9c;
+  border: 1px solid #1abc9c;
+  color: white;
+}
+
 img {
   width: 100%;
   height: 300px;
+}
+
+ul {
+  list-style-type: none;
+}
+
+.box-message {
+  font-size: 18px;
+  padding: 15px 10px;
+  list-style-type: none;
+  border: 1px solid #1abc9c;
+  margin: 10px 5px;
+  border-radius: 5px;
+  background-color: rgb(213, 247, 235);
+}
+
+.name{
+  border-bottom: 1px solid #010202;
+  font-weight: bold;
+  font-size: 13px;
+  /* margin: 10px; */
 }
